--- a/app/tsconfig.node.json
+++ b/app/tsconfig.node.json
@@ -1,9 +1,20 @@
+//{
+//  "compilerOptions": {
+//    "composite": true,
+//    "module": "ESNext",
+//    "moduleResolution": "Node",
+//    "allowSyntheticDefaultImports": true
+//  },
+//  "include": ["vite.config.ts"]
+//}
 {
   "compilerOptions": {
     "composite": true,
+    "skipLibCheck": true,
     "module": "ESNext",
-    "moduleResolution": "Node",
-    "allowSyntheticDefaultImports": true
+    "moduleResolution": "bundler",
+    "allowSyntheticDefaultImports": true,
+    "allowImportingTsExtensions": true
   },
   "include": ["vite.config.ts"]
 }
