Well... This commit basically changes the whole app. Now is an app for train times for Ferrovias

--- a/app/public/manifest.json
+++ b/app/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Ionic App",
-  "name": "My Ionic App",
+  "short_name": "MyFerrovias",
+  "name": "MyFerrovias",
   "icons": [
     {
       "src": "assets/icons/icon-72x72.png",
@@ -45,6 +45,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#ffffff",
-  "background_color": "#ffffff"
+  "theme_color": "#000000",
+  "background_color": "#000000"
 }
